Correction de francais

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Rapport.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Rapport.cshtml
@@ -19,8 +19,8 @@
         <label for="Mois">Mois :</label>
         <input type="number" name="Mois" min="1" max="12" value="@ViewBag.mois" />
         <br />
-    
-        <input type="submit" value="Générer le rapport" />
+
+        <input type="submit" value="Générer le rapport" class="btn btn-default" />
     }
 }
 <hr />
