--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Details.cshtml
@@ -32,7 +32,7 @@
 
 
 <h3>Rapport Annuel</h3>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.RapportAgent.First().DateSeance)
