--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GestionPhotoImmobilier.Models.Agent>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index des Agents";
 }
 
-<h2>Index</h2>
+<h2>Index des Agents</h2>
 
 <p>
     @Html.ActionLink("Ajouter un nouvel agent", "Create")
