--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Facturer.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Facturer.cshtml
@@ -58,7 +58,7 @@
 @{
     using (Html.BeginForm("Facturer", "Seances", new { id = Model.SeanceId }, FormMethod.Post))
     {
-        <input type="submit" value="Facturer la séance" />
+        <input type="submit" value="Facturer la séance" class="btn btn-default" />
     }
 }
 
