--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_GalleriePhoto.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/_GalleriePhoto.cshtml
@@ -36,7 +36,7 @@
         </div>
         using (Html.BeginForm("Sommaire", "Seances", new { id = Model.SeanceId }, FormMethod.Post))
         {
-            <input type="submit" value="Télécharger les photos" />
+            <input type="submit" value="Télécharger les photos" class="btn btn-default" />
         }
     }
     else
