--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GestionPhotoImmobilier.Models.Agence>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index des Agences";
 }
 
-<h2>Index</h2>
+<h2>Index des Agences</h2>
 
 <p>
     @Html.ActionLink("Créer une nouvelle agence", "Create")
