--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agents/Edit.cshtml
@@ -35,14 +35,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Sauvegarder" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Retourner à la liste", "Index")
+    @Html.ActionLink("Retour à l'Index", "Index")
 </div>
 
 @section Scripts {
