--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GestionPhotoImmobilier.Models.Propriete>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index des Proprietes";
 }
 
-<h2>Index</h2>
+<h2>Index des Proprietes</h2>
 
 <p>
     @Html.ActionLink("Créer une nouvelle propriété", "Create")
