--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Rdvs/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<GestionPhotoImmobilier.Models.Rdv>
 
 @{
-    ViewBag.Title = "Rendez-vous";
+    ViewBag.Title = "Index des Rendez-vous";
 }
 
-<h2>Index</h2>
+<h2>Index des Rendez-vous</h2>
 
 <p>
 
