--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Index.cshtml
@@ -27,7 +27,7 @@
             <p>
                 Par Photographe: @Html.TextBox("searchPhotographe", ViewBag.CurrentFilter as string)
                 Par Statut: @Html.TextBox("searchStatut", ViewBag.CurrentFilter as string)
-                <input type="submit" value="Rechercher" />
+                <input type="submit" value="Rechercher" class="btn btn-default" />
             </p>
 
         }
