SUPPERMIER AVEC UN S MAJUSCULE

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Proprietes/Index.cshtml
@@ -36,7 +36,7 @@
         <td>
             @Html.ActionLink("Modifier", "Edit", new { id=item.ProprieteId }) |
             @Html.ActionLink("Détails", "Details", new { id=item.ProprieteId }) |
-            @Html.ActionLink("supprimer", "Delete", new { id=item.ProprieteId })
+            @Html.ActionLink("Supprimer", "Delete", new { id=item.ProprieteId })
         </td>
     </tr>
 }
