--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Seances/Edit.cshtml
@@ -77,7 +77,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Statut, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Statut, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Statut, new { htmlAttributes = new { @class = "form-control", @readonly = "true"} })
                 @Html.ValidationMessageFor(model => model.Statut, "", new { @class = "text-danger" })
             </div>
         </div>
