--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionPhotoImmobilier.Models.Agence
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Détails";
 }
 
 <h2>Détails d'une agence</h2>
