--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionPhotoImmobilier.Models.Forfait
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Créer";
 }
 
 <h2>Créer un nouveau forfait</h2>
