--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GestionPhotoImmobilier.Models.Forfait
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
     <h4>Forfait</h4>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ForfaitId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.ForfaitId }) |
+    @Html.ActionLink("Retour à l'Index", "Index")
 </p>
