--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Details.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GestionPhotoImmobilier.Models.Photo
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
     <h4>Photo</h4>
@@ -39,6 +39,6 @@
     <img src="@cheminBase" />
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Retour à l'Index", "Index")
 </p>
