--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionPhotoImmobilier.Models.Agence
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Ajouter";
 }
 
 <h2>Ajouter une agence</h2>
@@ -41,7 +41,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Créer" class="btn btn-default" />
             </div>
         </div>
     </div>
