--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Agences/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionPhotoImmobilier.Models.Agence
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Modifier";
 }
 
 <h2>Modifier une agence</h2>
