--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Edit.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Forfaits/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GestionPhotoImmobilier.Models.Forfait
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Modifier";
 }
 
-<h2>Edit</h2>
+<h2>Modifier</h2>
 
 
 @using (Html.BeginForm())
@@ -50,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à l'Index", "Index")
 </div>
 
 @section Scripts {
