--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GestionPhotoImmobilier.Models.Photo
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Ajouter";
 }
 
-<h2>Create</h2>
+<h2>Ajouter une photo</h2>
 
 
 @using (Html.BeginForm("Create","Photos",FormMethod.Post, new { enctype = "multipart/form-data" })) 
