--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Delete.cshtml
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Views/Photos/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model GestionPhotoImmobilier.Models.Photo
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Supprimer";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Voulez-vous vraiment supprimer cette Photo?</h3>
 <div>
     <h4>Photo</h4>
     <hr />
